--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
   test-backend: 
     runs-on: ubuntu-22.04
     steps:
-      # Checkout your GitHub code using actions/checkout@v2.5.0
+      # Checkout yourr GitHub code using actions/checkout@v2.5.0
       - uses: actions/checkout@v2.5.0
 
       # Set up JDK 17 using actions/setup-java@v3
