--- a/my-project/ansible/inventories/setup.yml
+++ b/my-project/ansible/inventories/setup.yml
@@ -1,7 +1,7 @@
 all:
  vars:
    ansible_user: centos
-   ansible_ssh_private_key_file: /path/to/private/key
+   ansible_ssh_private_key_file: /home/gperon/DevOps-1/my-project/ansible/inventories/ssh-privatekey
  children:
    prod:
-     hosts: hostname or IP
+     hosts: guilhem.peron.takima.cloud
