--- a/my-project/ansible/inventories/setup.yml
+++ b/my-project/ansible/inventories/setup.yml
@@ -1,7 +1,8 @@
 all:
  vars:
    ansible_user: centos
-   ansible_ssh_private_key_file: /home/gperon/DevOps-1/my-project/ansible/inventories/ssh-privatekey
+   ansible_ssh_private_key_file: ${{ secrets.SSH_PRIVATE_KEY }}
+
  children:
    prod:
      hosts: guilhem.peron.takima.cloud
